[gd_scene load_steps=11 format=3 uid="uid://b6ffwt5665ctc"]

[ext_resource type="Script" path="res://src/scene/options/Options.gd" id="2"]
[ext_resource type="PackedScene" path="res://src/util/background/Background.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://de2tpgcubddv7" path="res://assets/ui/buttons/buttons_square/11_right_arrow.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ck8h8kkj60iwa" path="res://assets/ui/bars/bars_center/Decorated_bar.png" id="4_lmytf"]
[ext_resource type="Texture2D" uid="uid://bxbxdypqdr2jn" path="res://assets/ui/buttons/buttons_square/11_right_arrow_pick.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b5xrx2klxd5sd" path="res://assets/ui/decors/Decor_Title_options2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://ci6mg8ovjriql" path="res://assets/ui/buttons/buttons_rect/1_orange_button_pick.png" id="7"]
[ext_resource type="Texture2D" uid="uid://diaaemenansya" path="res://assets/ui/buttons/buttons_rect/1_orange_button.png" id="8"]
[ext_resource type="Texture2D" uid="uid://cj1xurdllnm4g" path="res://assets/ui/buttons/buttons_rect/1_violet_button_pick.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cb8jpbh4rq7y5" path="res://assets/ui/buttons/buttons_rect/1_violet_button.png" id="11"]

[node name="Options" type="Node2D"]
script = ExtResource("2")

[node name="Background" parent="." instance=ExtResource("3")]

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 2048.0

[node name="OptionsHeading" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -448.0
offset_top = 152.0
offset_bottom = 192.0
grow_horizontal = 0
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="Label" type="Label" parent="Control/OptionsHeading"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -448.0
offset_top = -88.0
offset_right = -32.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 80
text = "Options"
horizontal_alignment = 2
vertical_alignment = 1

[node name="OptionsBar" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -64.0
offset_right = 512.0
offset_bottom = 960.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_lmytf")
expand_mode = 1

[node name="SettingsButton" type="TextureButton" parent="Control/OptionsBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -384.0
offset_right = 256.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8")
texture_pressed = ExtResource("7")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/OptionsBar/SettingsButton"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExtrasButton" type="TextureButton" parent="Control/OptionsBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -224.0
offset_right = 256.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8")
texture_pressed = ExtResource("7")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/OptionsBar/ExtrasButton"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Extras"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsButton" type="TextureButton" parent="Control/OptionsBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -64.0
offset_right = 256.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8")
texture_pressed = ExtResource("7")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/OptionsBar/CreditsButton"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteSavegameButton" type="TextureButton" parent="Control/OptionsBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = 256.0
offset_right = 256.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("11")
texture_pressed = ExtResource("10")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/OptionsBar/DeleteSavegameButton"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "Delete Savegame"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -192.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
stretch_mode = 5

[connection signal="pressed" from="Control/OptionsBar/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/OptionsBar/ExtrasButton" to="." method="_on_extras_button_pressed"]
[connection signal="pressed" from="Control/OptionsBar/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Control/OptionsBar/DeleteSavegameButton" to="." method="_on_delete_savegame_button_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
